--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,9 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+			<configuration>
+                <argLine>-Xmx4096m</argLine>
+            </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
